[aliases]
release = sdist bdist_wheel
test = pytest

[wheel]
universal = 0

[metadata]
name = experimentvr
version = attr: experimentvr.__version__
author = Vertical Relevance
url = https://github.com/VerticalRelevance/Experiment-Broker-Module
description = Code for the Vertical Relevance Resiliency Framework   

[options]
packages = find:
install_requires =
    boto3
    chaostoolkit==1.16.0
    chaostoolkit-aws==0.29.0
    chaostoolkit-kubernetes==0.34.1
    chaostoolkit-lib==1.41.0
    opensearch-py
    kafka-python
    logzero

[options.packages.find]
exclude =
    lambda*